--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme: jekyll/minima
-title: UAV-USV Landing Project Page
+title: Autonomous Building Inspection Project Page
 description:
 
-repository: robora-lab/uav-usv-landing
+repository: robora-lab/autonomous-building-inspection
 
 navigation:
   - title: Robora Lab
